--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
+.body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+.container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+
 .sidebar {
     padding: 30px;
     width: 100%;
@@ -6,3 +15,9 @@
     margin-bottom: 20px;
     background: #fff;
     border: 1px solid #ddd;
+
+.icon {
+    width: 20px;
+    height: 20px;
+
+}
